Update db and view

--- a/Views/ClassSection/Index.cshtml
+++ b/Views/ClassSection/Index.cshtml
@@ -4,8 +4,8 @@
     Layout = Session["layout"].ToString();
 
     CongTacTroGiangKhoaCNTTEntities model = new CongTacTroGiangKhoaCNTTEntities();
-    var lstNganh = model.Nganh.OrderByDescending(o => o.id).ToList();
-    var lstHocKy = model.HocKy.OrderByDescending(o => o.id).ToList();
+    var lstNganh = model.Nganh.OrderByDescending(o => o.ID).ToList();
+    var lstHocKy = model.HocKy.OrderByDescending(o => o.ID).ToList();
 
     int id_hkGanNhat = 0;
     if (lstHocKy.Count > 0)
@@ -13,11 +13,11 @@
         var hkGanNhat = lstHocKy.OrderByDescending(o => o.NgayBatDau).ToList().First();
         if (hkGanNhat == null)
         {
-            id_hkGanNhat = lstHocKy.First().id;
+            id_hkGanNhat = lstHocKy.First().ID;
         }
         else
         {
-            id_hkGanNhat = hkGanNhat.id;
+            id_hkGanNhat = hkGanNhat.ID;
         }
     }
 
@@ -27,7 +27,7 @@
         var nganhcntt = lstNganh.FirstOrDefault(f => f.TenNganh.ToLower().Equals("công nghệ thông tin"));
         if (nganhcntt != null)
         {
-            id_nganhCNTT = nganhcntt.id;
+            id_nganhCNTT = nganhcntt.ID;
         }
     }
 
@@ -74,13 +74,13 @@
                                 @foreach (var item in lstHocKy)
                                 {
 
-                                    if (id_hkGanNhat == item.id)
+                                    if (id_hkGanNhat == item.ID)
                                     {
-                                        <option selected value="@item.id">Học kỳ @item.TenHocKy</option>
+                                        <option selected value="@item.ID">Học kỳ @item.TenHocKy</option>
                                     }
                                     else
                                     {
-                                        <option value="@item.id">Học kỳ @item.TenHocKy</option>
+                                        <option value="@item.ID">Học kỳ @item.TenHocKy</option>
                                     }
                                 }
                             </select>
@@ -105,9 +105,9 @@
                                 {
                                     j++;
                                     <tr>
-                                        <td>@item.MaLHP</td>
+                                        <td>@item.LopHocPhan.MaLHP</td>
                                         <td>@item.LopHocPhan.TenHP</td>
-                                        <td>@(item.Thu); Tiết @(item.TietHoc); Tuần @(item.TuanBD) - @(item.TuanKT); Phòng @(item.TenPhong)</td>
+                                        <td>@(item.Thu); Tiết @(item.TietHoc); Tuần @(item.TuanBD) - @(item.TuanKT); Phòng @(item.Phong)</td>
                                         <td>
                                             @if (j == 4 || j == 6)
                                             {
@@ -167,11 +167,20 @@
                 <div class="modal-body">
                     <div class="row">
                         <div class="col-12">
-                            <div class="">
+                            <div class="mb-3">
                                 <label class="form-label" for="lydo">Lý do đề xuất <span class="text-danger">*</span></label>
                                 <textarea type="text" id="lydo" rows="4" class="form-control" placeholder="Nhập lý do cần đề xuất trợ giảng"></textarea>
                                 <span class="text-danger" id="valid-lydo"></span>
                             </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="camket">
+                                <label class="form-check-label fw-bold" for="camket">
+                                    Đồng ý chịu toàn bộ trách nhiệm về đề xuất trợ giảng nếu có bất kì vấn đề gì xảy ra trong công tác trợ giảng.
+                                </label>
+                            </div>
+                            <span class="text-danger" id="valid-camket"></span>
                         </div>
                         <div class="col-12">
                             <hr class="my-4" />
