--- a/Views/TeachingAssistant/Register.cshtml
+++ b/Views/TeachingAssistant/Register.cshtml
@@ -165,7 +165,7 @@
                                     <option selected value="">---- Chọn học kỳ ----</option>
                                     @foreach (var item in lstHk)
                                     {
-                                        <option value="@item.id">@item.TenHocKy</option>
+                                        <option value="@item.ID">@item.TenHocKy</option>
                                     }
                                 </select>
                                 <span class="text-danger" id="valid-hocky"></span>
@@ -180,7 +180,7 @@
                                     <option selected value="">---- Chọn ngành ----</option>
                                     @foreach (var item in lstNganh)
                                     {
-                                        <option value="@item.id">@item.TenNganh</option>
+                                        <option value="@item.ID">@item.TenNganh</option>
                                     }
                                 </select>
                                 <span class="text-danger" id="valid-nganh"></span>
@@ -235,7 +235,7 @@
                                     <option selected value="">---- Chọn học kỳ ----</option>
                                     @foreach (var item in lstHk)
                                     {
-                                        <option value="@item.id">@item.TenHocKy</option>
+                                        <option value="@item.ID">@item.TenHocKy</option>
                                     }
                                 </select>
                                 <span class="text-danger" id="valid-hocky"></span>
@@ -250,7 +250,7 @@
                                     <option selected value="">---- Chọn ngành ----</option>
                                     @foreach (var item in lstNganh)
                                     {
-                                        <option value="@item.id">@item.TenNganh</option>
+                                        <option value="@item.ID">@item.TenNganh</option>
                                     }
                                 </select>
                                 <span class="text-danger" id="valid-nganh"></span>
