--- a/Views/TeachingAssistant/TaskList.cshtml
+++ b/Views/TeachingAssistant/TaskList.cshtml
@@ -58,10 +58,10 @@
                                 <div class="mb-3">
                                     <label class="form-label" for="hoten">
                                         Mô tả công việc
-                                        @if (!role.AspNetUsers.AspNetRoles.First().Id.Equals("5"))
+                                        @if (!role.AspNetUsers.AspNetRoles.First().ID.Equals("4"))
                                         {<span class="text-danger">*</span>}
                                     </label>
-                                    <textarea class="form-control text-dark" style="height: 126px !important;" @(role.AspNetUsers.AspNetRoles.First().Id.Equals("5") ? "disabled" : "")>Chuẩn bị danh sách lớp học cho buổi học đầu tiên</textarea>
+                                    <textarea class="form-control text-dark" style="height: 126px !important;" @(role.AspNetUsers.AspNetRoles.First().ID.Equals("4") ? "disabled" : "")>Chuẩn bị danh sách lớp học cho buổi học đầu tiên</textarea>
                                     <span class="text-danger" id="valid-hoten"></span>
                                 </div>
                             </div>
@@ -69,10 +69,10 @@
                                 <div class="mb-3">
                                     <label class="form-label" for="hoten">
                                         Kết quả mong đợi
-                                        @if (!role.AspNetUsers.AspNetRoles.First().Id.Equals("5"))
+                                        @if (!role.AspNetUsers.AspNetRoles.First().ID.Equals("4"))
                                         {<span class="text-danger">*</span>}
                                     </label>
-                                    <textarea class="form-control text-dark" style="height: 126px !important;" @(role.AspNetUsers.AspNetRoles.First().Id.Equals("5") ? "disabled" : "")>hoàn thành 1 file excel chứa danh sách sinh viên trong lớp học</textarea>
+                                    <textarea class="form-control text-dark" style="height: 126px !important;" @(role.AspNetUsers.AspNetRoles.First().ID.Equals("4") ? "disabled" : "")>hoàn thành 1 file excel chứa danh sách sinh viên trong lớp học</textarea>
                                     <span class="text-danger" id="valid-hoten"></span>
                                 </div>
                             </div>
@@ -85,7 +85,7 @@
                                     <label class="form-label" for="gioitinh">
                                         Trạng thái <span class="text-danger">*</span>
                                     </label>
-                                    @if (!role.AspNetUsers.AspNetRoles.First().Id.Equals("5"))
+                                    @if (!role.AspNetUsers.AspNetRoles.First().ID.Equals("4"))
                                     {
                                         <select class="form-select text-dark">
                                             <option value="Đang thực hiện">Chưa hoàn thành</option>
@@ -106,31 +106,31 @@
                             <div class="col-12">
                                 <div class="mb-3">
                                     <label class="form-label" for="hoten">
-                                        Thời gian <small><small class="text-muted">(số giờ)</small></small>
-                                        @if (!role.AspNetUsers.AspNetRoles.First().Id.Equals("5"))
+                                        Số giờ quy đổi @*<small><small class="text-muted">(số giờ ước lượng)</small></small>*@
+                                        @if (!role.AspNetUsers.AspNetRoles.First().ID.Equals("4"))
                                         {<span class="text-danger">*</span>}
                                     </label>
-                                    <input value="10" type="number" class="form-control text-dark" @(role.AspNetUsers.AspNetRoles.First().Id.Equals("5") ? "disabled" : "") />
+                                    <input value="10" type="number" class="form-control text-dark" @(role.AspNetUsers.AspNetRoles.First().ID.Equals("4") ? "disabled" : "") />
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="mb-3">
                                     <label class="form-label" for="hoten">
-                                        Thời gian hoàn thành
-                                        @if (!role.AspNetUsers.AspNetRoles.First().Id.Equals("5"))
+                                        Thời hạn hoàn thành
+                                        @if (!role.AspNetUsers.AspNetRoles.First().ID.Equals("4"))
                                         {<span class="text-danger">*</span>}
                                     </label>
-                                    <input value="2024-10-30" type="text" class="form-control text-dark" @(role.AspNetUsers.AspNetRoles.First().Id.Equals("5") ? "disabled" : "") />
+                                    <input value="2024-10-30" type="text" class="form-control flatpickr" @(role.AspNetUsers.AspNetRoles.First().ID.Equals("4") ? "disabled" : "") />
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="mb-3">
                                     <label class="form-label" for="hoten">
                                         Nơi làm việc
-                                        @if (!role.AspNetUsers.AspNetRoles.First().Id.Equals("5"))
+                                        @if (!role.AspNetUsers.AspNetRoles.First().ID.Equals("4"))
                                         {<span class="text-danger">*</span>}
                                     </label>
-                                    <input value="tại nhà" type="text" class="form-control text-dark" @(role.AspNetUsers.AspNetRoles.First().Id.Equals("5") ? "disabled" : "") />
+                                    <input value="tại nhà" type="text" class="form-control text-dark" @(role.AspNetUsers.AspNetRoles.First().ID.Equals("4") ? "disabled" : "") />
                                 </div>
                             </div>
                         </div>
