--- a/Views/TermAndMajor/Semester.cshtml
+++ b/Views/TermAndMajor/Semester.cshtml
@@ -18,7 +18,7 @@
                                 <a href="@Url.Action("index", "dashboard")">Dashboard</a>
                             </li>
                             <li class="breadcrumb-item">
-                                <a>Học kỳ & Ngành</a>
+                                <a>Học kỳ, Ngành & Khoa</a>
                             </li>
                             <li class="breadcrumb-item active" aria-current="page">
                                 Quản Lý Học Kỳ
@@ -48,10 +48,7 @@
                                     <th>Học Kỳ</th>
                                     <th>Năm bắt đầu</th>
                                     <th>Năm kết thúc</th>
-                                    <th>Tuần bắt đầu</th>
                                     <th>Ngày bắt đầu</th>
-                                    <th>Tiết tối đa</th>
-                                    <th>Lớp tối đa</th>
                                     <th>Trạng thái</th>
                                     <th></th>
                                 </tr>
@@ -63,22 +60,19 @@
                                         <td>@item.TenHocKy</td>
                                         <td>@item.NamBatDau</td>
                                         <td>@item.NamKetThuc</td>
-                                        <td>@item.TuanBatDau</td>
                                         <td>@item.NgayBatDau.ToString("dd/MM/yyyy")</td>
-                                        <td>@item.TietToiDa</td>
-                                        <td>@item.LopToiDa</td>
                                         <td>
                                             <div class="form-check form-switch  mb-2">
-                                                <input class="form-check-input" type="checkbox" role="switch" fullname="@item.TenHocKy" name="@item.id" id="trangthai-@item.id" checked="@item.TrangThai">
+                                                <input class="form-check-input" type="checkbox" role="switch" fullname="@item.TenHocKy" name="@item.ID" id="trangthai-@item.ID" checked="@item.TrangThai">
                                             </div>
                                         </td>
                                         <td class="text-nowrap">
-                                            <a style="font-size: 20px" role="button" id="openSua-@item.id" name="@item.id" class="text-success">
+                                            <a style="font-size: 20px" role="button" id="openSua-@item.ID" name="@item.ID" class="text-success">
                                                 <i class="bi bi-pencil-square me-2"></i>
                                             </a>
                                             @if (item.ThoiKhoaBieu.Count < 1)
                                             {
-                                                <a style="font-size: 20px" role="button" id="openXoa-@item.id" fullname="@item.TenHocKy" name="@item.id" class="text-danger">
+                                                <a style="font-size: 20px" role="button" id="openXoa-@item.ID" fullname="@item.TenHocKy" name="@item.ID" class="text-danger">
                                                     <i class="bi bi-trash"></i>
                                                 </a>
                                             }
@@ -106,8 +100,8 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="mb-3">
-                                <label class="form-label" maxlength="3" for="tenhocky">Học kỳ <span class="text-danger">*</span></label>
-                                <input type="number" id="tenhocky" class="form-control" placeholder="Nhập học kỳ (VD: 224)">
+                                <label class="form-label" for="tenhocky">Học kỳ <span class="text-danger">*</span></label>
+                                <input type="number" id="tenhocky"maxlength="3"  class="form-control" placeholder="Nhập học kỳ (VD: 224)">
                                 <span class="text-danger" id="valid-tenhocky"></span>
                             </div>
                         </div>
@@ -143,16 +137,7 @@
                                 <span class="text-danger" id="valid-namketthuc"></span>
                             </div>
                         </div>
-
-                        <div class="col-12">
-                            <div class="mb-3">
-                                <label class="form-label" for="tuanbatdau">
-                                    Tuần bắt đầu <span class="text-danger">*</span>
-                                </label>
-                                <input type="number" id="tuanbatdau" class="form-control" placeholder="Nhập số tuần (VD: 30)">
-                                <span class="text-danger" id="valid-tuanbatdau"></span>
-                            </div>
-                        </div>
+                       
                         <div class="col-12">
                             <div class="mb-3">
                                 <label class="form-label" for="ngaybatdau">
@@ -160,21 +145,6 @@
                                 </label>
                                 <input id="ngaybatdau" type="text" class="form-control flatpickr" placeholder="Chọn ngày bắt đầu">
                                 <span class="text-danger" id="valid-ngaybatdau"></span>
-                            </div>
-                        </div>
-
-                        <div class="col-md-6 col-12">
-                            <div class="mb-3">
-                                <label class="form-label" for="tiettoida">Số tiết tối đa  <span class="text-danger">*</span></label>
-                                <input type="number" id="tiettoida" class="form-control" placeholder="Nhập số tiết (VD: 60)">
-                                <span class="text-danger" id="valid-tiettoida"></span>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-12">
-                            <div class="mb-3">
-                                <label class="form-label" for="loptoida">Số lớp tối đa <span class="text-danger">*</span></label>
-                                <input type="number" id="loptoida" class="form-control" placeholder="Nhập số lớp (VD: 20)">
-                                <span class="text-danger" id="valid-loptoida"></span>
                             </div>
                         </div>
 
