--- a/Views/TermAndMajor/_EditMajor.cshtml
+++ b/Views/TermAndMajor/_EditMajor.cshtml
@@ -1,11 +1,15 @@
 ﻿@model QuanLyCongTacTroGiangKhoaCNTT.Models.Nganh
-
+@using QuanLyCongTacTroGiangKhoaCNTT.Models;
+@{
+    CongTacTroGiangKhoaCNTTEntities models = new CongTacTroGiangKhoaCNTTEntities();
+    var lstKhoa = models.Khoa.ToList();
+}
 <div class="modal-body" id="capnhatnganh-partial">
     <div class="row">
         <div class="col-12">
             <div class="mb-3">
                 <label class="form-label" for="editmanganh">Mã ngành</label>
-                <input hidden id="idn" value="@Model.id" />
+                <input hidden id="idn" value="@Model.ID" />
                 <input value="@Model.MaNganh" disabled type="number" id="editmanganh" class="form-control" placeholder="Nhập mã ngành">
                 <span class="text-danger" id="valid-editmanganh"></span>
             </div>
@@ -19,31 +23,25 @@
         </div>
         <div class="col-12">
             <div class="mb-3">
-                <label class="form-label" for="edittenviettat">Tên viết tắt <span class="text-danger">*</span></label>
-                <input value="@Model.TenVietTat" type="text" id="edittenviettat" class="form-control" placeholder="Nhập tên viết tắt của ngành">
-                <span class="text-danger" id="valid-edittenviettat"></span>
+                <div class="col-12">
+                    <div class="mb-3">
+                        <label class="form-label" for="editkhoa">Khoa <span class="text-danger">*</span></label>
+                        <select id="editkhoa" class="form-select">
+                            <option value="">---- Chọn khoa ----</option>
+                            @foreach (var item in lstKhoa)
+                            {
+                                if (item.ID == Model.ID_Khoa)
+                                {
+                                    <option selected value="@item.ID">@item.TenKhoa</option>
+                                    continue;
+                                }
+                                <option value="@item.ID">@item.TenKhoa</option>
+                            }
+                        </select>
+                        <span class="text-danger" id="valid-editkhoa"></span>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="col-12">
-            <div class="mb-3">
-                <label class="form-label" for="editctdt">
-                    Chương trình đào tạo <span class="text-danger">*</span>
-                </label>
-                <select class="form-select" id="editctdt">
-                    @if (Model.CTDT.Equals("Tiêu chuẩn"))
-                    {
-                        <option value="Đặc biệt">Chương trình Đặc biệt</option>
-                        <option selected value="Tiêu chuẩn">Chương trình Tiêu chuẩn</option>
-                    }
-                    else
-                    {
-                        <option selected value="Đặc biệt">Chương trình Đặc biệt</option>
-                        <option value="Tiêu chuẩn">Chương trình Tiêu chuẩn</option>
-                    }
-                </select>
-                <span class="text-danger" id="valid-editctdt"></span>
-            </div>
-        </div>
-
     </div>
 </div>
