--- a/Views/TimeTable/_FilterData.cshtml
+++ b/Views/TimeTable/_FilterData.cshtml
@@ -3,7 +3,7 @@
     var lstTkb = Model.ToList();
 }
 <tbody id="filterLoad">
-    @foreach (var item in lstTkb.GroupBy(g => g.MaMH))
+    @foreach (var item in lstTkb.GroupBy(g => g.LopHocPhan.MaMH))
     {
         <tr>
             <td class="bg-secondary text-white" style="box-shadow: inset -1px -1px 0 #ffffff; padding: 10px; white-space: normal; min-width: 140px !important; max-width: 200px; word-break: break-word; position: sticky; left: 0;" valign="middle">@item.Select(s => new { s.LopHocPhan.TenHP }).First().TenHP</td>
@@ -19,13 +19,13 @@
                             <td style="padding: 10px;">
                                 @foreach (var items in lstTkbs)
                                 {
-                                    if (items.LoaiHP.ToLower().Equals("thực hành"))
+                                    if (items.LopHocPhan.LoaiHP.ToLower().Equals("thực hành"))
                                     {
-                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-warning" role="button">GV: @items.LopHocPhan.TenCBGD</span></p>
+                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.LopHocPhan.MaLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-warning" role="button">GV: @items.LopHocPhan.TenCBGD</span></p>
                                     }
                                     else
                                     {
-                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-success" role="button">GV: @items.LopHocPhan.TenCBGD</span></p>
+                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.LopHocPhan.MaLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-success" role="button">GV: @items.LopHocPhan.TenCBGD</span></p>
                                     }
                                 }
                             </td>
@@ -44,13 +44,13 @@
 
                                 @foreach (var items in lstTkbs)
                                 {
-                                    if (items.LoaiHP.ToLower().Equals("thực hành"))
+                                    if (items.LopHocPhan.LoaiHP.ToLower().Equals("thực hành"))
                                     {
-                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-warning" role="button">GV: @items.LopHocPhan.TenCBGD</span></p>
+                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.LopHocPhan.MaLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-warning" role="button">GV: @items.LopHocPhan.TenCBGD</span></p>
                                     }
                                     else
                                     {
-                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-success" role="button">GV: @items.LopHocPhan.TenCBGD</span></p>
+                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.LopHocPhan.MaLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-success" role="button">GV: @items.LopHocPhan.TenCBGD</span></p>
                                     }
                                 }
                             </td>
@@ -69,13 +69,13 @@
 
                                 @foreach (var items in lstTkbs)
                                 {
-                                    if (items.LoaiHP.ToLower().Equals("thực hành"))
+                                    if (items.LopHocPhan.LoaiHP.ToLower().Equals("thực hành"))
                                     {
-                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-warning" role="button">GV: @items.LopHocPhan.TenCBGD</span></p>
+                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.LopHocPhan.MaLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-warning" role="button">GV: @items.LopHocPhan.TenCBGD</span></p>
                                     }
                                     else
                                     {
-                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-success" role="button">GV: @items.LopHocPhan.TenCBGD</span></p>
+                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.LopHocPhan.MaLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-success" role="button">GV: @items.LopHocPhan.TenCBGD</span></p>
                                     }
                                 }
                             </td>
@@ -94,13 +94,13 @@
 
                                 @foreach (var items in lstTkbs)
                                 {
-                                    if (items.LoaiHP.ToLower().Equals("thực hành"))
+                                    if (items.LopHocPhan.LoaiHP.ToLower().Equals("thực hành"))
                                     {
-                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-warning" role="button">GV: @items.LopHocPhan.TenCBGD</span></p>
+                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.LopHocPhan.MaLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-warning" role="button">GV: @items.LopHocPhan.TenCBGD</span></p>
                                     }
                                     else
                                     {
-                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-success" role="button">GV: @items.LopHocPhan.TenCBGD</span></p>
+                                        <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.LopHocPhan.MaLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-success" role="button">GV: @items.LopHocPhan.TenCBGD</span></p>
                                     }
                                 }
                             </td>
@@ -122,13 +122,13 @@
 
                                     @foreach (var items in lstTkbs)
                                     {
-                                        if (items.LoaiHP.ToLower().Equals("thực hành"))
+                                        if (items.LopHocPhan.LoaiHP.ToLower().Equals("thực hành"))
                                         {
-                                            <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-warning" role="button">GV: @items.LopHocPhan.TenCBGD</span></p>
+                                            <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.LopHocPhan.MaLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-warning" role="button">GV: @items.LopHocPhan.TenCBGD</span></p>
                                         }
                                         else
                                         {
-                                            <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-success" role="button">GV: @items.LopHocPhan.TenCBGD</span></p>
+                                            <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.LopHocPhan.MaLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-success" role="button">GV: @items.LopHocPhan.TenCBGD</span></p>
                                         }
                                     }
                                 </td>
@@ -146,13 +146,13 @@
 
                                     @foreach (var items in lstTkbs)
                                     {
-                                        if (items.LoaiHP.ToLower().Equals("thực hành"))
+                                        if (items.LopHocPhan.LoaiHP.ToLower().Equals("thực hành"))
                                         {
-                                            <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-warning" role="button">GV: @items.LopHocPhan.TenCBGD</span></p>
+                                            <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.LopHocPhan.MaLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-warning" role="button">GV: @items.LopHocPhan.TenCBGD</span></p>
                                         }
                                         else
                                         {
-                                            <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.MaGocLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.TenPhong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-success" role="button">GV: @items.LopHocPhan.TenCBGD</span></p>
+                                            <p style="margin-bottom: 0.5rem;"><span data-bs-toggle="tooltip" data-bs-html="true" title="<b>@items.LopHocPhan.MaLHP</b><br><b>Tuần BĐ/KT:</b> @(items.TuanBD)/@(items.TuanKT)<br> <b>Phòng:</b> @(items.Phong)<br><b>Tiết học:</b> @(items.TietHoc)<br><b>TA:</b> Chưa phân" class="badge bg-success" role="button">GV: @items.LopHocPhan.TenCBGD</span></p>
                                         }
                                     }
                                 </td>
